<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu3"
    tools:context="com.example.android.notiphone.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView05"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:background="@color/year80"
        android:gravity="center"
        android:text="@string/rick_astley"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView04" />

    <Button
        android:id="@+id/textView06"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="-8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/photo01"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView07"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/textView07"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="-8dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/photo02"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/textView11"
        android:layout_width="96dp"
        android:layout_height="128dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/poster3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="48dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="202dp"
        android:background="@drawable/disco1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView01"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/icon"
        android:layout_height="30dp"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/nothing"
        android:layout_marginTop="4dp"
        android:background="@drawable/disco2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView02"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/icon"
        android:layout_height="30dp"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/nothing"
        android:layout_marginTop="4dp"
        android:background="@drawable/disco3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView03"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="48dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/disco4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView04"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="48dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/disco5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView05"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/textView08"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon"
        android:layout_marginBottom="@dimen/medium"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="@dimen/small"
        android:layout_marginStart="@dimen/medium"
        android:background="@drawable/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView10" />

    <Button
        android:id="@+id/textView10"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon"
        android:layout_marginBottom="16dp"
        android:background="@drawable/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/textView09"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="@dimen/medium"
        android:layout_marginLeft="@dimen/nothing"
        android:layout_marginRight="@dimen/small"
        android:background="@drawable/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintLeft_toRightOf="@+id/textView10"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/year80"
        android:gravity="center"
        android:text="@string/beegees"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView01"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:background="@color/year80"
        android:gravity="center"
        android:text="@string/michael_jackson"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/textView02"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:background="@color/year80"
        android:gravity="center"
        android:text="@string/a_ha"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView01" />

    <TextView
        android:id="@+id/textView03"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:background="@color/year80"
        android:gravity="center"
        android:text="@string/survivor"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView02" />

    <TextView
        android:id="@+id/textView04"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:background="@color/year80"
        android:gravity="center"
        android:text="@string/madonna"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView03" />

    <Button
        android:id="@+id/button"
        android:layout_width="48dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/disco6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView01"
        app:layout_constraintTop_toBottomOf="@+id/button5" />


</android.support.constraint.ConstraintLayout>